fix: откат numpy до 1.26.4 для совместимости с pandas_ta

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-python-telegram-bot
-telethon
-yfinance
-pandas
-numpy==1.26.4
-pandas_ta
-openai
-beautifulsoup4
-requests
-python-dotenv
-setuptools
+python-telegram-bot==20.7
+yfinance==0.2.43
+pandas==2.2.3
+pandas_ta==0.3.14b0
+requests==2.32.3
+telethon==1.36.0
+python-dotenv==1.0.1
+setuptools<81
