--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-python-telegram-bot==20.7
+python-telegram-bot==20.6
 yfinance==0.2.43
-pandas==2.2.3
+pandas==2.2.2
 pandas_ta==0.3.14b0
-requests==2.32.3
+requests==2.31.0
 telethon==1.36.0
 python-dotenv==1.0.1
-numpy<2.0
+numpy==1.26.4
 setuptools<81
