--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,1 @@
-python-telegram-bot[job-queue]==22.1
-yfinance==0.2.43
-pandas==2.2.2
-pandas_ta==0.3.14b0
-requests==2.31.0
-telethon==1.36.0
-python-dotenv==1.0.1
-numpy==1.26.4
-setuptools<81
+python-telegram-bot[job-queue]==20.6 pandas==2.2.2 numpy==1.26.4 pandas_ta==0.3.14b0 requests==2.31.0 telethon==1.36.0 python-dotenv==1.0.1 setuptools<81 cython==0.29.37 MetaTrader5
